test commit for gh-pages

--- a/config.yaml
+++ b/config.yaml
@@ -28,7 +28,7 @@ params:
     - "aceitche.cripto@gmail.com"
     - "(51) 99638-3319"
 
-  copyright: "® 2022 AceiTchê Cripto Marca Registrada"
+  copyright: "® 2022 AceiTchê Cripto marca registrada"
 
 menus:
   main:
