--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://gabrielseibel1.github.io/aceitchecripto"
+baseURL: "https://aceitchecripto.com"
 theme: "up-business-theme"
 languageCode: "pt-br"
 
