--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ languageCode: "pt-br"
 
 title: "AceiTchê Cripto" # intentionally missing the last O
 
-# googleAnalytics: ""
+googleAnalytics: "AW-10967398952"
 
 summaryLength: 20
 
