--- a/data/guardiao/offer.yaml
+++ b/data/guardiao/offer.yaml
@@ -2,13 +2,13 @@ enabled: true
 id: "cta"
 
 content:
-  title: "Tenha criptomoedas corretamente!"
+  title: "Tenha criptomoedas **corretamente!**"
   features:
-    - text: "12 meses de acesso ao curso Guardião Cripto"
-    - text: "5h30m de vídeo-aulas teóricas e práticas"
-    - text: "22 resumos em pdf para consulta e referência"
-    - text: "3 materiais de manejo cripto para imprimir"
-    - text: "1 ano de suporte e auxílio do professor"
+    - text: "**12 meses de acesso** ao curso Guardião Cripto"
+    - text: "**5h30m de vídeo-aulas** teóricas e práticas"
+    - text: "**22 resumos** em pdf para consulta e referência"
+    - text: "**3 materiais** de manejo cripto para imprimir"
+    - text: "**1 ano de suporte** e auxílio do professor"
   image: "images/mockup.png"
   discountpre: "*SOMENTE ATÉ 07 DE NOVEMBRO!*"
   discountval: "ECONOMIZE R$100!"
