use regulation img

--- a/data/guardiao/problems.yaml
+++ b/data/guardiao/problems.yaml
@@ -13,6 +13,6 @@ content:
       title: "Falta de Segurança"
       text: "Ladrões, governos e hackers querem pegar as tuas criptos. Corretoras trabalham junto do governo, têm falhas ocultas de segurança e são grandes alvos de hacks."
 
-    - image: "images/padlock.jpg"
+    - image: "images/regulation.jpg"
       title: "Falta de Liberdade"
       text: "Corretoras e governos podem controlar o que você pode ou não fazer com suas criptos, censurando e congelando fundos dos usuários despreparados."
