--- a/data/guardiao/features.yaml
+++ b/data/guardiao/features.yaml
@@ -10,7 +10,7 @@ content:
 
     - image: "images/tools.jpg"
       title: "Aprender a usar ferramentas"
-      text: "Com aulas práticas e demonstrações detalhadas, você vai acertar de primera."
+      text: "Com aulas práticas e demonstrações detalhadas, você vai acertar de primeira."
 
     - image: "images/btc-xmr.png"
       title: "Focar em Bitcoin e Monero"
