text review (fix typos and grammar)

--- a/data/guardiao/features.yaml
+++ b/data/guardiao/features.yaml
@@ -6,7 +6,7 @@ content:
   cards:
     - image: "images/light.jpg"
       title: "Entender as criptomoedas"
-      text: "Com aulas teóricas sobre essa tecnologia, ela vai fazer sentido pra você."
+      text: "Com aulas teóricas sobre essa tecnologia, ela vai fazer sentido para você."
 
     - image: "images/tools.jpg"
       title: "Aprender a usar ferramentas"
