--- a/data/guardiao/teacher.yaml
+++ b/data/guardiao/teacher.yaml
@@ -5,4 +5,4 @@ content:
   - image: "images/seibel4.png"
     pretitle: "Quem vai te ensinar tudo isso?"
     title: "Seu professor é um engenheiro de computação."
-    text: "Gabriel Seibel é formado em engenharia de computação pela UFRGS, e trabalhou como programador por 2 anos em uma das maiores empresas de software do mundo, a SAP. Nesse curso ele vai te ensinar a melhor abordagem de manejo de criptomoedas do mercado."
+    text: "Gabriel Seibel é formado em engenharia de computação pela UFRGS e trabalhou como programador por 2 anos na SAP, uma das maiores empresas de software do mundo. Nesse curso ele vai te ensinar a melhor abordagem de manejo de criptomoedas do mercado."
