--- a/data/guardiao/problems.yaml
+++ b/data/guardiao/problems.yaml
@@ -15,4 +15,4 @@ content:
 
     - image: "images/regulation.jpg"
       title: "Falta de Liberdade"
-      text: "Corretoras e governos podem controlar o que você pode ou não fazer com suas criptos, censurando e congelando fundos dos usuários despreparados."
+      text: "Corretoras e governos controlam o que você pode ou não fazer com suas criptomoedas, censurando movimentações e congelando fundos, através de restrições e punições."
