--- a/data/guardiao/testimonials.yaml
+++ b/data/guardiao/testimonials.yaml
@@ -18,7 +18,7 @@ content:
       text: "Gostei demais da experiência, foi sensacional, indico demais."
       client: "Heitor Lima"
 
-    - text: "Aprendo muito com o conteúdo que tu disponibiliza no insta."
+    - text: "Aprendo muito com o conteúdo que tu disponibiliza."
       client: "Cliente anônimo"
 
     - text: "Já me ajudou muito! Trouxe segurança pra eu fazer minha primeira compra de cripto!"
