--- a/data/guardiao/hero1.yaml
+++ b/data/guardiao/hero1.yaml
@@ -2,9 +2,9 @@ enabled: true
 id: "hero1"
 
 content:
-  image: "images/vault.jpg"
-  title: "**Proteja** seu dinheiro"
-  text: "Aplique um método sólido, testado e ultra-seguro que te diferencia do resto dos investidores. Torne-se um Guardião de criptomoedas."
+  image: "images/vault-crypto.png"
+  title: "**Criptomoedas** seguras e privadas"
+  text: "Aplique um método de manejo privado e ultra-seguro que te diferencia do resto dos investidores. Domine a tecnologia e torne-se um Guardião de criptomoedas."
 
   buttonPrimary:
     label: "GARANTA A SUA VAGA"
