--- a/data/guardiao/offer.yaml
+++ b/data/guardiao/offer.yaml
@@ -9,7 +9,7 @@ content:
     - text: "**22 resumos** em pdf para consulta e referência"
     - text: "**3 materiais** de manejo cripto para imprimir"
     - text: "**1 ano de suporte** e auxílio do professor"
-  image: "images/mockup.png"
+  image: "images/mockups.png"
   discountpre: "*SOMENTE ATÉ 07 DE NOVEMBRO!*"
   discountval: "ECONOMIZE R$100!"
   priceold: "R$197"
