change price and add testimonial

--- a/data/guardiao/offer.yaml
+++ b/data/guardiao/offer.yaml
@@ -10,10 +10,10 @@ content:
     - text: "**3 materiais** de manejo cripto para imprimir"
     - text: "**1 ano de suporte** e auxílio do professor"
   image: "images/mockups.png"
-  discountpre: "*SOMENTE ATÉ 07 DE NOVEMBRO!*"
-  discountval: "ECONOMIZE R$100!"
-  priceold: "R$197"
-  pricenow: "R$97"
+  condition1: "*SOMENTE ATÉ 07/11!*"
+  condition2: "MATRÍCULAS ABERTAS!"
+  #priceold: "R$197"
+  pricenow: "R$227"
   button:
     label: "QUERO SER UM GUARDIÃO"
     url: "https://pay.hotmart.com/E74737230B"
