update home testimonials, improve triple headline

--- a/data/guardiao/isnot.yaml
+++ b/data/guardiao/isnot.yaml
@@ -2,6 +2,6 @@ enabled: true
 id: "isnot"
 
 content:
-  first: "Este **NÃO É** mais um curso com **falsas promessas de enriquecer** por especulação ou investir em algo milagroso, como tantos outros."
+  first: "Este **NÃO É** mais um curso com **falsas promessas de enriquecer** por especulação ou investimento alguma carteira milagrosa, como tantos outros."
   second: "Em vez disso ..."
   third: "O curso te dá o domínio de **tecnologias** para **proteger** o teu patrimônio em criptomoedas."
