--- a/data/guardiao/hero2.yaml
+++ b/data/guardiao/hero2.yaml
@@ -7,7 +7,7 @@ style:
 content:
   image: "images/guardiao-logo-horiz-transp.png"
   title: "Proteja-se como um **Guardião Cripto**"
-  text: "O curso Guardião Cripto vai te ensinar do básico ao avançado a manejar criptomoedas com mais segurança e privacidade."
+  text: "O curso Guardião Cripto vai te ensinar, do básico ao avançado, a manejar criptomoedas com segurança e privacidade."
   buttonPrimary:
     label: "GARANTA A SUA VAGA"
     url: "https://pay.hotmart.com/E74737230B"
