make cta btns scroll to offer

--- a/data/guardiao/curriculum.yaml
+++ b/data/guardiao/curriculum.yaml
@@ -6,4 +6,4 @@ content:
   image: "images/services-web-development.png"
   button:
     label: "GARANTA A SUA VAGA"
-    url: "https://pay.hotmart.com/E74737230B"
+    url: "#offer"
