--- a/data/guardiao/hero2.yaml
+++ b/data/guardiao/hero2.yaml
@@ -10,5 +10,5 @@ content:
   text: "O curso Guardião Cripto vai te ensinar, do básico ao avançado, a manejar criptomoedas com segurança e privacidade."
   buttonPrimary:
     label: "GARANTA A SUA VAGA"
-    url: "https://pay.hotmart.com/E74737230B"
+    url: "#offer"
 
