--- a/data/guardiao/isnot.yaml
+++ b/data/guardiao/isnot.yaml
@@ -4,4 +4,4 @@ id: "isnot"
 content:
   first: "Este **NÃO É** mais um curso com **falsas promessas de enriquecer** por especulação ou investimento em alguma carteira milagrosa, como tantos outros."
   second: "Em vez disso ..."
-  third: "O curso te dá o domínio de **tecnologias** para **proteger** o teu patrimônio em criptomoedas."
+  third: "O curso te dá o domínio de **tecnologias** para **proteger** o seu patrimônio em criptomoedas."
