make fonts smaller

--- a/data/guardiao/hero1.yaml
+++ b/data/guardiao/hero1.yaml
@@ -3,7 +3,7 @@ id: "hero1"
 
 content:
   image: "images/vault-crypto.png"
-  title: "**Criptomoedas** seguras e privadas"
+  title: "Tenha **criptomoedas** seguras e privadas"
   text: "Aplique um método de manejo privado e ultra-seguro que te diferencia do resto dos investidores. Domine a tecnologia e torne-se um Guardião de criptomoedas."
 
   buttonPrimary:
