--- a/data/guardiao/offer.yaml
+++ b/data/guardiao/offer.yaml
@@ -9,10 +9,11 @@ content:
     - text: "**22 resumos** em pdf para consulta e referência"
     - text: "**3 materiais** de manejo cripto para imprimir"
     - text: "**1 ano de suporte** e auxílio do professor"
+    - text: "**[BÔNUS] 3 aulas** de economia e criptos (transcritas!)"
   image: "images/mockups.png"
-  condition1: "*SOMENTE ATÉ 14/11!*"
-  condition2: "MATRÍCULAS ABERTAS"
-  #priceold: "R$197"
+  condition1: "*DESCONTO E MATRÍCULAS SOMENTE ATÉ 14/11!*"
+  condition2: "Economize até 27%!"
+  priceold: "R$310"
   pricedirect: "R$227"
   price12x: "R$22,66"
   button:
