add cnpj to footer, reduce its font

--- a/config.yaml
+++ b/config.yaml
@@ -27,6 +27,7 @@ params:
     - "(51) 99638-3319"
 
   copyright: "® 2022 AceiTchê Cripto marca registrada"
+  cnpj: "47.127.520/0001-23"
 
 menus:
   main:
