--- a/data/guardiao/hero1.yaml
+++ b/data/guardiao/hero1.yaml
@@ -2,7 +2,7 @@ enabled: true
 id: "hero1"
 
 content:
-  image: "images/vault-crypto.png"
+  image: "images/vault-crypto-zoom.png"
   title: "Tenha **criptomoedas** seguras e privadas"
   text: "**Aprenda** um método de **manejo privado e ultra-seguro** que te diferencia do resto dos investidores. **Domine a tecnologia** e torne-se um Guardião de criptomoedas."
 
