change website preview image

--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ params:
   title: "AceiTchê Cript" # intentionally missing the last O
   description: "Tenha criptomoedas da maneira correta, com segurança e privacidade."
   images: 
-    - "images/guardiao-logo.png"
+    - "images/aceitche-logo-light-cook-dark-bg.png"
 
   logo: "aceitche-logo.png"
 
