change home ctas to free classes

--- a/data/home/cta.yaml
+++ b/data/home/cta.yaml
@@ -5,8 +5,8 @@ content:
   title: "Use criptomoedas e gerencie corretamente o seu dinheiro!"
   image: "images/aceitche-logo-horiz.png"
   button1:
-    label: "Ver Cursos"
-    url: "/cursos"
+    label: "Aulas Grátis"
+    url: "/aulas-gratis/"
   button2:
     label: "Entrar em Contato"
     url: "/contato"
