Add limited time offer data

--- a/data/guardiao/header.yaml
+++ b/data/guardiao/header.yaml
@@ -2,7 +2,7 @@ enabled: true
 id: "header"
 
 content:
-  headline: "SOMENTE ATÉ 14/12"
+  headline: "DISPONÍVEL POR TEMPO LIMITADO"
   button:
     label: "GARANTIR VAGA"
     url: "#offer"
